--- a/docs/tutorials/1 - Beginer - Plot ALBEDOs from Smarts.ipynb
+++ b/docs/tutorials/1 - Beginer - Plot ALBEDOs from Smarts.ipynb
@@ -7,10 +7,9 @@
     "# 1 - Beginner - Plot Spectra and Albedos from SMARTS\n",
     "\n",
     "##### Generate & Plot Spectra and Albedos from SMARTS\n",
-    "###### &ensp;&ensp;&ensp;&ensp; * Plot DNI and DHI for a particular time and location\n",
-    "###### &ensp;&ensp;&ensp;&ensp; * Plot Ground Albedo for various materials at AM 1.5\n",
-    "###### &ensp;&ensp;&ensp;&ensp; * Plot Ground Albedo for complete Weather Data\n",
-    "> Generate spectras for albedo and plot them, for different airmass / weather data:\n"
+    "###### &ensp;&ensp;&ensp;&ensp; * 1. DNI and DHI for a particular time and location\n",
+    "###### &ensp;&ensp;&ensp;&ensp; * 2. Ground Albedo for various materials at AM 1.5\n",
+    "###### &ensp;&ensp;&ensp;&ensp; * 3. Ground Albedo for complete AOD and PWD Weather Data\n"
    ]
   },
   {
